gitops-manifests/gitops-tools/argo-events/service-eventsource-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-webhook-nodeport-metrics
  namespace: argo-events
  labels:
    eventsource-name: gitea-webhook
    purpose: metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "12000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    eventsource-name: gitea-webhook
  ports:
    - name: metrics
      port: 12000
      targetPort: 12000
      protocol: TCP
