gitops-manifests/gitops-tools/argo-events/service-gitea-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-webhook-nodeport
  namespace: argo-events
  labels:
    eventsource-name: gitea-webhook
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "12000"
    prometheus.io/path: "/metrics"
spec:
  type: NodePort
  selector:
    eventsource-name: gitea-webhook
  ports:
    - name: http
      port: 12000
      targetPort: 12000
      nodePort: 30200
