gitops-manifests/gitops-tools/argo-events/networkpolicy-eventsource-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gitea-and-sensors-to-webhook
  namespace: argo-events
spec:
  podSelector:
    matchLabels:
      eventsource-name: gitea-webhook
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argo-events
      ports:
        - protocol: TCP
          port: 12000
